--- a/css/style.css
+++ b/css/style.css
@@ -163,9 +163,20 @@ button{
 }
 /* Hero */
 .hero {
-  background-color: var(--background-hero);
-  text-align: center;
-  padding: 200px 0;
+    text-align: center;
+    background-color: #2F303A;;
+    max-width: 1600px;
+    height: 600px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/heroimg.jpg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    
 }
 .hero-captoin {
   color: var(--h1-text-color);
