--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,28 @@ button{
 .main-hang-list:first-child{
   margin-left: 0;
 }
+.main-hang-list::before{
+  display: block;
+  content: "";
+  height: 120px;
+  background: #E5E5E5;
+  border-radius: 4px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto auto;
+}
+.icon-antena::before{
+  background-image: url(../images/antenna.svg);
+}
+.icon-clock::before {
+  background-image: url(../images/clock.svg);
+}
+.icon-diagram::before {
+  background-image: url(../images/diagram.svg);
+}
+.icon-space::before {
+  background-image: url(../images/astronaut.svg);
+}
 .list-items {
   color: var(--primiry-text-color);
 
@@ -230,6 +252,7 @@ button{
   text-transform: uppercase;
 
   margin-bottom: 10px;
+  margin-top: 30px;
 }
 .items-text {
   color: var(--title-text-color);
