--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,23 @@ button{
 .contact-link:focus {
   color: var(--acent-color);
 }
+.contact-icon-block{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.phone-icon{
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+.mail-icon{
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+}
 /* Hero */
 .hero {
     text-align: center;
@@ -220,27 +237,18 @@ button{
 .main-hang-list:first-child{
   margin-left: 0;
 }
-.main-hang-list::before{
-  display: block;
-  content: "";
+.hang-block-icons{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  max-width: 270px;
   height: 120px;
-  background: #E5E5E5;
+  background-color: #F5F4FA;
   border-radius: 4px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: auto auto;
 }
-.icon-antena::before{
-  background-image: url(../images/antenna.svg);
-}
-.icon-clock::before {
-  background-image: url(../images/clock.svg);
-}
-.icon-diagram::before {
-  background-image: url(../images/diagram.svg);
-}
-.icon-space::before {
-  background-image: url(../images/astronaut.svg);
+.hang-icons{
+  width: 70px;
+  
 }
 .list-items {
   color: var(--primiry-text-color);
@@ -305,6 +313,10 @@ button{
 }
 .worker{
   margin-left: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .worker:first-child{
   margin-left: 0;
@@ -333,6 +345,77 @@ button{
 .worker-title{ 
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.social-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-elements{
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 16px;
+  margin-right: 10px;
+  fill: #AFB1B8;
+}
+.social-elements:last-child{
+  margin-right: 0;
+}
+.social-icon{
+  width: 20px;
+  height: 20px;
+}
+.social-elements:hover,
+.social-elements:focus{
+  background-color: #2196f3;
+  border-radius: 50%;
+  fill: #F5F4FA;
+}
+/* Clients */
+.client-header{
+  color: var(--primiry-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.client-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 50px;
+}
+.clients{
+  margin-right: 30px;
+}
+.client-items{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: 1px solid #AFB1B8;
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  min-width: 170px;
+  min-height: 92px;
+}
+.clients:last-child{
+  margin: 0;
+}
+.client-icon{
+  fill: red;
+  margin: 16px 32px;
+}
+.client-icon:hover,
+.client-icon:focus{
+  color: var(--acent-color);
 }
 /* footer */
 .footer {
