--- a/css/style.css
+++ b/css/style.css
@@ -167,14 +167,10 @@ justify-content: center;
 align-items: center;
 }
 .phone-icon{
-  width: 10px;
-  height: 16px;
   margin-right: 10px;
   fill: currentColor;
 }
 .mail-icon{
-  width: 16px;
-  height: 12px;
   margin-right: 10px;
   fill: currentColor;
 }
@@ -364,10 +360,6 @@ align-items: center;
 .social-elements:last-child{
   margin-right: 0;
 }
-.social-icon{
-  width: 20px;
-  height: 20px;
-}
 .social-elements:hover,
 .social-elements:focus{
   background-color: #2196f3;
@@ -405,17 +397,20 @@ align-items: center;
 
   min-width: 170px;
   min-height: 92px;
+
+  cursor: pointer;
+  fill: currentColor;
 }
 .clients:last-child{
   margin: 0;
 }
 .client-icon{
-  fill: red;
   margin: 16px 32px;
 }
-.client-icon:hover,
-.client-icon:focus{
+.client-items:hover,
+.client-items:focus{
   color: var(--acent-color);
+  border: 1px solid #2196F3;
 }
 /* footer */
 .footer {
@@ -477,7 +472,27 @@ font-style: normal;
 .address-item:focus {
   color: var(--acent-color);
 }
+.social-main{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--h1-text-color);
+}
+.footer-adrees-block{
+display: flex;
+justify-content: flex-start;
+flex-direction: column;
+align-items: baseline;
+}
+.footer-social{
+  display: flex;
+  align-items: baseline;
+  flex-direction: column;
 
+}
 /* portfolio */
 /* button */
 .button-filter {
