--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ align-items: center;
   display: flex;
   text-align: center;
   justify-content: center;
+  align-items: center;
   max-width: 270px;
   height: 120px;
   background-color: #F5F4FA;
@@ -247,7 +248,7 @@ align-items: center;
 }
 .hang-icons{
   width: 70px;
-  
+  height: 70px;
 }
 .list-items {
   color: var(--primiry-text-color);
@@ -316,6 +317,7 @@ align-items: center;
   0px 1px 1px rgba(0, 0, 0, 0.14),
   0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background-color: #FFFFFF;
 }
 .worker:first-child{
   margin-left: 0;
@@ -349,6 +351,10 @@ align-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 16px;
+}
+.social-list-elements{
+  margin-right: 10px;
 }
 .social-elements{
   width: 44px;
@@ -356,11 +362,9 @@ align-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 16px;
-  margin-right: 10px;
   fill: #AFB1B8;
 }
-.social-elements:last-child{
+.social-list-elements:last-child{
   margin-right: 0;
 }
 .social-elements:hover,
@@ -385,6 +389,7 @@ align-items: center;
   align-items: center;
 
   margin-top: 50px;
+
 }
 .clients{
   margin-right: 30px;
@@ -402,17 +407,14 @@ align-items: center;
   min-height: 92px;
 
   cursor: pointer;
-  fill: currentColor;
+  fill: #AFB1B8;
 }
 .clients:last-child{
   margin: 0;
 }
-.client-icon{
-  margin: 16px 32px;
-}
 .client-items:hover,
 .client-items:focus{
-  color: var(--acent-color);
+  fill: var(--acent-color);
   border: 1px solid #2196F3;
 }
 /* footer */
@@ -486,22 +488,10 @@ font-style: normal;
 }
 .container-list {
   display: flex;
-  justify-content: ;
-  align-items: ;
-}
-.footer-adrees-block{
-display: flex;
-justify-content: flex-start;
-flex-direction: column;
-align-items: baseline;
-flex-grow: 1;
+  align-items: baseline;
 }
 .footer-social{
-  display: flex;
-  align-items: baseline;
-  flex-direction: column;
-  justify-content: baseline;
-  flex-grow: 8;
+  margin-left: 70px;
 }
 .social-list-footer{
   display: flex;
@@ -607,7 +597,11 @@ flex-grow: 1;
   border: 1px solid #EEEEEE;
   box-sizing: border-box;
 }
-.filter-link:hover{
+.filter-link{
+  display: block;
+}
+.filter-link:hover,
+.filter-link:focus{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   0px 4px 4px rgba(0, 0, 0, 0.06),
   1px 4px 6px rgba(0, 0, 0, 0.16);
